kubernetes/overlays/prod/auth-patches.yaml
#kind: PersistentVolumeClaim
#apiVersion: v1
#metadata:
#  name: cryoem-logbook--expdata
#spec:
#  storageClassName: cryoem-logbook-prod--expdata

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  template:
    spec:
      containers:
      - name: auth
      - name: telegraf
