kubernetes/overlays/prod/collab-listener-patches.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collab-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collab-listener
  template:
    metadata:
      labels:
        app: collab-listener
    spec:
      securityContext:
        runAsUser: 15693
        runAsGroup: 3591
      containers:
      - name: collab-listener
        image: slaclab/explgbk-collab-listener:20200421.0
        imagePullPolicy: Always
      volumes:
      - name: exp-data
        persistentVolumeClaim:
          claimName: fs-ddn-sdf-group-cryoem-exp
