kubernetes/overlays/prod/logbook-patches.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explgbk
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: explgbk
