kubernetes/overlays/prod/message_bus-patches.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
         storage: 1Gi
      storageClassName: cryoem-logbook-prod--kafka
