kubernetes/overlays/prod/mongo-restore-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: restore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-restore
  template:
    metadata:
      labels:
        app: mongo-restore
    spec:
      containers:
      - name: mongo-restore
        image: mongo:bionic
        command: [ "bash", "-c", "sleep infinity" ]
        volumeMounts:
        - mountPath: /data
          name: mongo-restore
      - name: scp
        image: kroniak/ssh-client
        command:  [ "bash", "-c", "sleep infinity" ]
        volumeMounts:
        - mountPath: /data
          name: mongo-restore
      volumes:
      - name: mongo-restore
        persistentVolumeClaim:
          claimName: mongo-restore
