kubernetes/overlays/prod/nodeSelector-patches.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  template:
    spec:
      nodeSelector:
        group/cryoem: 'true'
        storage/cryoem: 'true'
