kubernetes/overlays/prod/ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
    - host: cryoem-logbook.slac.stanford.edu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: auth
              port:
                number: 443
